k8s-kustomize/overlays/prod/env.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard
spec:
  template:
    spec:
      containers:
        - name: kuard
