k8s-kustomize/overlays/prod/scale.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard
spec:
  replicas: 3
  template:
    spec:
      containers:
        - name: kuard
          resources:
            limits:
              memory: 200Mi
              cpu: "0.2"
            requests:
              memory: 100Mi
              cpu: "0.1"
